[package]
name = "chip8"
version = "0.1.0"
authors = ["duttaditya18@gmail.com <duttaditya18@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = { git = "https://github.com/emoon/rust_minifb" }
rand = "0.7"
rodio = "0.11.0"
